--- a/Evaluacion/public/admin/assets/css/app-style.css
+++ b/Evaluacion/public/admin/assets/css/app-style.css
@@ -49,7 +49,6 @@ html{
   height: 100%;
 }
 
-
 @-ms-viewport {
 	width: device-width
 }
@@ -534,7 +533,7 @@ body.bg-theme13 {
   background-image: linear-gradient(180deg, #ff5447, #f1076f);
 }
 body.bg-theme14 {
-  background-image: linear-gradient(180deg, #08a50e, #69bb03);
+  background-image: linear-gradient(180deg, #bad1bb, #000000);
 }
 body.bg-theme15 {
   background-image: linear-gradient(45deg, #6a11cb, #2575fc);
